--- a/Project_TransferWise/ViewController/Main Tab View Controller/Account View Controller/AccountViewController.xib
+++ b/Project_TransferWise/ViewController/Main Tab View Controller/Account View Controller/AccountViewController.xib
@@ -32,10 +32,10 @@
                     </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ukA-VU-bFJ" userLabel="Contact View">
-                    <rect key="frame" x="176.66666666666666" y="52" width="61" height="61"/>
+                    <rect key="frame" x="176.66666666666666" y="138.66666666666666" width="61" height="61"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="account_contact" translatesAutoresizingMaskIntoConstraints="NO" id="HUJ-1B-uLb">
-                            <rect key="frame" x="10.333333333333343" y="10.666666666666664" width="40" height="40"/>
+                            <rect key="frame" x="10.333333333333343" y="10.666666666666686" width="40" height="40"/>
                         </imageView>
                     </subviews>
                     <constraints>
@@ -54,7 +54,10 @@
                     </variation>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PwJ-T3-eLf">
-                    <rect key="frame" x="103.66666666666669" y="163" width="207" height="65.666666666666686"/>
+                    <rect key="frame" x="103.66666666666669" y="219.66666666666666" width="207" height="29"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="29" id="1if-B4-xwr"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                     <state key="normal" title="Personal account">
                         <color key="titleColor" red="0.0" green="0.72549019607843135" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -64,7 +67,7 @@
                     </connections>
                 </button>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="down arrow" translatesAutoresizingMaskIntoConstraints="NO" id="lux-fY-8jh">
-                    <rect key="frame" x="278.66666666666669" y="186" width="15" height="20"/>
+                    <rect key="frame" x="278.66666666666669" y="224.33333333333334" width="15" height="20"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="41m-zk-C2Z"/>
                         <constraint firstAttribute="width" constant="15" id="i22-VJ-phx"/>
@@ -195,7 +198,6 @@
                 <constraint firstItem="NuR-Qp-XaE" firstAttribute="top" secondItem="FAG-Bf-wQ4" secondAttribute="bottom" constant="30" id="P99-k0-HjT"/>
                 <constraint firstItem="17L-iJ-sjh" firstAttribute="leading" secondItem="DM7-sN-dpz" secondAttribute="trailing" constant="19.000000000000028" id="Pkm-hn-wUu"/>
                 <constraint firstItem="f1p-r3-gWF" firstAttribute="top" secondItem="wNO-IX-MGw" secondAttribute="bottom" id="Uu3-go-ZFu"/>
-                <constraint firstItem="PwJ-T3-eLf" firstAttribute="top" secondItem="ukA-VU-bFJ" secondAttribute="bottom" constant="50" id="VOC-x0-9wk"/>
                 <constraint firstItem="0iw-9k-uKi" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="Vht-gs-voZ"/>
                 <constraint firstItem="FAG-Bf-wQ4" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.001" id="YOu-x0-WWQ"/>
                 <constraint firstItem="f1p-r3-gWF" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.1176" id="a2X-v1-Fh9"/>
@@ -208,7 +210,6 @@
                 <constraint firstItem="172-ZH-pLD" firstAttribute="trailing" secondItem="f1p-r3-gWF" secondAttribute="trailing" id="dlk-6k-tVk"/>
                 <constraint firstItem="17L-iJ-sjh" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="f1p-r3-gWF" secondAttribute="trailing" id="dxf-fi-TGW"/>
                 <constraint firstItem="17L-iJ-sjh" firstAttribute="height" secondItem="f1p-r3-gWF" secondAttribute="height" multiplier="0.241379" id="eJ4-uw-rxS"/>
-                <constraint firstItem="ukA-VU-bFJ" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" priority="750" constant="52" id="eL3-bk-pei"/>
                 <constraint firstItem="yHn-wl-Kpm" firstAttribute="top" secondItem="GVz-Wj-zdv" secondAttribute="bottom" constant="16" id="fGP-1w-exQ"/>
                 <constraint firstItem="DM7-sN-dpz" firstAttribute="leading" secondItem="f1p-r3-gWF" secondAttribute="leading" id="h0x-aY-bw3"/>
                 <constraint firstItem="17L-iJ-sjh" firstAttribute="top" secondItem="FsS-gk-aN1" secondAttribute="top" constant="-10" id="hIg-XK-8nT"/>
@@ -218,10 +219,11 @@
                 <constraint firstItem="yHn-wl-Kpm" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="m5f-rK-ZbD"/>
                 <constraint firstItem="GVz-Wj-zdv" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="0.903382" id="mG7-C6-6yg"/>
                 <constraint firstItem="yHn-wl-Kpm" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.001" id="nrp-dv-5vx"/>
-                <constraint firstItem="GVz-Wj-zdv" firstAttribute="top" secondItem="PwJ-T3-eLf" secondAttribute="bottom" constant="60" id="oMt-7z-6yn"/>
+                <constraint firstItem="GVz-Wj-zdv" firstAttribute="top" secondItem="PwJ-T3-eLf" secondAttribute="bottom" constant="40" id="oMt-7z-6yn"/>
                 <constraint firstItem="N72-aO-oZy" firstAttribute="trailing" secondItem="0iw-9k-uKi" secondAttribute="trailing" id="okn-rO-HFY"/>
                 <constraint firstItem="wNO-IX-MGw" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.001" id="qfa-ei-szh"/>
                 <constraint firstItem="f1p-r3-gWF" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="0.92" id="qqa-nd-fOp"/>
+                <constraint firstItem="PwJ-T3-eLf" firstAttribute="top" secondItem="ukA-VU-bFJ" secondAttribute="bottom" constant="20" id="qzG-0z-nq8"/>
                 <constraint firstItem="PwJ-T3-eLf" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="rU2-nv-aeS"/>
                 <constraint firstItem="wNO-IX-MGw" firstAttribute="top" secondItem="0iw-9k-uKi" secondAttribute="bottom" id="sef-07-qzF"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="cBc-Hm-grR" secondAttribute="trailing" constant="35" id="tK2-oS-dly"/>
